tests/org.eclipse.php.core.tests/workspace/errors/php53/testUseStatementUsage01.pdtt
--TEST--
Test unused use statement
--FILE--
<?php
use Test\UnusedStatement;
use Test\UsedStatement;

new UsedStatement();
--EXPECT--
[line=2, start=6, end=31] Unused import 'Test\UnusedStatement', consider removing